# t3_fastApi

./: .gitignore  README.md  pyproject.toml
api/: models.py
app/: main.py  models.py
infra/: .env  docker-compose.yml
t3_fastApi/: Dockerfile  create_base.py  main.py  pyproject.toml
t3_fastApi/admin/: create_admin.py
t3_fastApi/admin/models/: admin_models.py
t3_fastApi/api/: app.py  crud.py
t3_fastApi/api/models/: schemas.py
t3_fastApi/api/routers/: orders.py  stores.py  visits.py
t3_fastApi/database/: database.py
t3_fastApi/database/models/: models.py
t3_fastApi/sql_app/: admin.py  crud.py  database.py  models.py  schemas.py
