[tool.poetry]
name = "t3-fastapi"
version = "0.1.0"
description = ""
authors = ["Данил Воронин <melinbodb@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
psycopg2-binary = "^2.9.9"
peewee = "^3.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
